# qtpromise

./: .appveyor.yml  .gitignore  .remarkrc.yml  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  conanfile.py  package-lock.json  package.json  qpm.json  qtpromise.pri  qtpromise.pro
.github/workflows/: ci.yaml
cmake/: QtPromiseAddTest.cmake  qtpromiseConfig.cmake.in
docs/: README.md  SUMMARY.md
docs/.vuepress/: config.js
docs/.vuepress/styles/: index.styl
docs/qtpromise/: api-reference.md  getting-started.md  qtconcurrent.md  qtsignals.md
docs/qtpromise/exceptions/: canceled.md  conversion.md  timeout.md  undefined.md
docs/qtpromise/helpers/: attempt.md  connect.md  each.md  filter.md  map.md  qpromise.md  qpromiseall.md  reduce.md  resolve.md
docs/qtpromise/qpromise/: all.md  as.md  constructor.md  convert.md  delay.md  each.md  filter.md  map.md  props.md  reduce.md  reject.md  resolve.md  spread.md  tapfail.md  then.md  timeout.md  wait.md
include/: QtPromise  QtQmlPromise
src/: src.pro
src/imports/: imports.pro  imports.qrc  plugin.cpp  plugins.qmltypes  qmldir  qtqmlpromise.js
src/qtpromise/: qpromise.h  qpromise.inl  qpromise_p.h  qpromise_qfuture.inl  qpromiseconnections.h  qpromiseerror.h  qpromiseexceptions.h  qpromisefuture.h  qpromiseglobal.h  qpromisehelpers.h  qpromisehelpers_p.h  qpromiseresolver.h  qpromisesignals.h  qtpromise.pri  qtpromise.pro
src/qtqmlpromise/: qjspromise.cpp  qjspromise.h  qjspromise_p.h  qtqmlpromise.pri  qtqmlpromise.pro  qtqmlpromiseglobal.h
tests/auto/: auto.pro  tests.pri
tests/auto/benchmark/: benchmark.pro  tst_benchmark.cpp
tests/auto/future/: future.pro  tst_future.cpp
tests/auto/helpers/: helpers.pro  tst_helpers.cpp
tests/auto/qpromise/: qpromise.pro  tst_qpromise.cpp
tests/auto/qtpromise/: CMakeLists.txt  qtpromise.pri  qtpromise.pro
tests/auto/qtpromise/benchmark/: tst_benchmark.cpp
tests/auto/qtpromise/deprecations/: CMakeLists.txt  tst_helpers_qpromise.cpp  tst_helpers_qpromiseall.cpp  tst_qpromise_all.cpp
tests/auto/qtpromise/deprecations/helpers/: CMakeLists.txt  helpers.pro
tests/auto/qtpromise/deprecations/helpers/qpromise/: CMakeLists.txt  tst_qpromise.cpp
tests/auto/qtpromise/deprecations/helpers/qpromiseall/: CMakeLists.txt  tst_qpromiseall.cpp
tests/auto/qtpromise/deprecations/qpromise/: CMakeLists.txt
tests/auto/qtpromise/deprecations/qpromise/all/: CMakeLists.txt  tst_all.cpp
tests/auto/qtpromise/exceptions/: CMakeLists.txt  tst_exceptions.cpp
tests/auto/qtpromise/future/: CMakeLists.txt  tst_future.cpp
tests/auto/qtpromise/helpers/: CMakeLists.txt  helpers.pro  tst_all.cpp  tst_attempt.cpp  tst_connect.cpp  tst_each.cpp  tst_filter.cpp  tst_helpers.cpp  tst_map.cpp  tst_reduce.cpp  tst_reject.cpp  tst_resolve.cpp
tests/auto/qtpromise/internals/: tst_argsof.cpp
tests/auto/qtpromise/qpromise/: CMakeLists.txt  qpromise.pro  tst_as.cpp  tst_construct.cpp  tst_convert.cpp  tst_delay.cpp  tst_each.cpp  tst_fail.cpp  tst_filter.cpp  tst_finally.cpp  tst_map.cpp  tst_operators.cpp  tst_qpromise.cpp  tst_reduce.cpp  tst_resolve.cpp  tst_tap.cpp  tst_tapfail.cpp  tst_then.cpp  tst_timeout.cpp
tests/auto/qtpromise/qpromise/all/: tst_all.cpp
tests/auto/qtpromise/qpromise/cast/: cast.pro  tst_cast.cpp
tests/auto/qtpromise/qpromise/construct/: CMakeLists.txt  tst_construct.cpp
tests/auto/qtpromise/qpromise/delay/: CMakeLists.txt  tst_delay.cpp
tests/auto/qtpromise/qpromise/each/: CMakeLists.txt  tst_each.cpp
tests/auto/qtpromise/qpromise/fail/: CMakeLists.txt  tst_fail.cpp
tests/auto/qtpromise/qpromise/filter/: CMakeLists.txt  tst_filter.cpp
tests/auto/qtpromise/qpromise/finally/: CMakeLists.txt  tst_finally.cpp
tests/auto/qtpromise/qpromise/map/: CMakeLists.txt  tst_map.cpp
tests/auto/qtpromise/qpromise/operators/: CMakeLists.txt  tst_operators.cpp
tests/auto/qtpromise/qpromise/props/: props.pro  tst_props.cpp
tests/auto/qtpromise/qpromise/reduce/: CMakeLists.txt  tst_reduce.cpp
tests/auto/qtpromise/qpromise/reject/: reject.pro  tst_reject.cpp
tests/auto/qtpromise/qpromise/resolve/: CMakeLists.txt  tst_resolve.cpp
tests/auto/qtpromise/qpromise/spread/: spread.pro  tst_spread.cpp
tests/auto/qtpromise/qpromise/tap/: CMakeLists.txt  tst_tap.cpp
tests/auto/qtpromise/qpromise/tapfail/: CMakeLists.txt  tst_tapfail.cpp
tests/auto/qtpromise/qpromise/then/: CMakeLists.txt  tst_then.cpp
tests/auto/qtpromise/qpromise/timeout/: CMakeLists.txt  tst_timeout.cpp
tests/auto/qtpromise/qpromiseconnections/: tst_qpromiseconnections.cpp
tests/auto/qtpromise/requirements/: tst_requirements.cpp
tests/auto/qtpromise/shared/: data.h  object.h  utils.h
tests/auto/qtpromise/signals/: signals.pro  tst_signals.cpp
tests/auto/qtpromise/thread/: CMakeLists.txt  tst_thread.cpp
tests/auto/qtqmlpromise/: qtqmlpromise.pri  qtqmlpromise.pro
tests/auto/requirements/: requirements.pro  tst_requirements.cpp
tests/auto/thread/: thread.pro  tst_thread.cpp
(+25 files in other folders)
