add_subdirectory(construct)
add_subdirectory(delay)
add_subdirectory(each)
add_subdirectory(fail)
add_subdirectory(filter)
add_subdirectory(finally)
add_subdirectory(map)
add_subdirectory(operators)
add_subdirectory(reduce)
add_subdirectory(resolve)
add_subdirectory(tap)
add_subdirectory(tapfail)
add_subdirectory(then)
add_subdirectory(timeout)
